--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -68,24 +68,23 @@ from subscriptions, while libraries and funders could change their
 funding models and shift expenditures from subscription to open access.
 However, initial approaches, mainly based on publication fees, also
 called article processing charges (APCs), did not contribute
-substantially to an large open access uptake. In 2009, Springer reported
+substantially to a large open access uptake. In 2009, Springer reported
 open access to 1\% of articles in hybrid journals (Dallmeier-Tiessen et
 al., 2010). Other publishers also recorded a low uptake. In 2011, only
-1-2\% of articles in over 4,300 hybrid journals from large publishers
-were open access (B.-C. Björk, 2012), growing to around 4\% between 2011
-and 2013 (Laakso \& Björk, 2016).
+1-2\% of articles were open access (Björk, 2012), growing to around 4\%
+between 2011 and 2013 (Laakso \& Björk, 2016).
 
 With the introduction of central funding mechanisms for hybrid open
-access publication fees in some European countries since 2012 an
-increase in open access could be observed (B.-C. Björk, 2017; Huang et
-al., 2020; Jubb et al., 2017; Piwowar et al., 2018). For example,
-studying university output, Robinson-Garcia et al. (2020) estimated a
-median uptake of 7.1\% in the period 2014-2017. In particular, British
-(17\%), Austrian (15\%) and Dutch (13\%) universities contributed to
-this trend. However, this shift in funding policy towards hybrid open
-access also added to the overall cost of publishing, which includes
-subscription spending and the administrative efforts required to handle
-payments (Pinfield et al., 2016). Moreover, established large commercial
+access publication fees in some European countries since 2012, an
+increase in open access could be observed (Björk, 2017; Huang et al.,
+2020; Jubb et al., 2017; Piwowar et al., 2018). For example, studying
+university output, Robinson-Garcia et al. (2020) estimated a median
+uptake of 7.1\% in the period 2014-2017. In particular, British (17\%),
+Austrian (15\%) and Dutch (13\%) universities contributed to this trend.
+However, this shift in funding policy towards hybrid open access also
+added to the overall cost of publishing, which includes subscription
+spending and the administrative efforts required to handle payments
+(Pinfield et al., 2016). Moreover, established large commercial
 publishers, which already dominated the publishing market (Larivière et
 al., 2015), disproportionately benefited from hybrid open access funding
 in comparison to full open access publishers (Butler et al., 2023; Jahn
@@ -95,104 +94,110 @@ As a consequence, libraries and their consortia began to develop
 licensing strategies aimed at avoiding such `double dipping' scenarios,
 in which well-established commercial publishers gain twice from reading
 and publication fees, as well as to increase publisher-provided
-immediate open access (B. Björk \& Solomon, 2014; Schimmer et al.,
-2015). These considerations resulted into transformative agreements,
-which cover a broad range of successfully negotiated contracts between
-library consortia and publishers from mid-2010s onwards where
-institutional spending for subscriptions are re-purposed for open access
-publishing (Borrego et al., 2020; Hinchliffe, 2019). Transformative
-agreements seek to control costs while allowing a transitional phase for
-publishing more open access articles. Although transformative agreements
-mainly focus on large hybrid journals and subscription-only portfolios
-of commercial publishers, they aim at a higher degree of transparency
-than previous big deals, where contracts including payments were
-confidential (Bergstrom et al., 2014).
+immediate open access (Björk \& Solomon, 2014; Schimmer et al., 2015).
+These considerations resulted into transformative agreements, which
+cover a broad range of successfully negotiated contracts between library
+consortia and publishers from mid-2010s onwards where institutional
+spending for subscriptions are re-purposed for open access publishing
+(Borrego et al., 2020; Hinchliffe, 2019). Transformative agreements seek
+to control costs while allowing a transitional phase for publishing more
+open access articles. Although transformative agreements mainly bundle
+hybrid and subscription-only journals from commercial publishers, they
+aim at a higher degree of transparency than previous big deals, where
+contracts including payments were confidential (Bergstrom et al., 2014).
 
 The introduction of transformative agreements aligns with funding policy
 changes, such as the decision made by the cOAlition S, a consortium of
 national funders including the European Commission, to no longer provide
 financial support for individual publication fees when publishing in
-hybrid journals. According ot its Plan S, they only accept hybrid open
-access through transformative agreements ``during a transition period
-that should be as short as possible'' (Schiltz, 2018). Specifically,
-cOAlition S funders agreed to support hybrid open access solely through
-transformative agreements from 1 January 2021, until the end of 2024.
-Notably, the German Research Foundation (DFG), despite not being part of
-cOAlition S, has also extended its financial support for hybrid open
-access through transformative agreements (Mittermaier, 2021).
-Previously, the DFG only provided funding for full open access journals
-(Jahn \& Tullney, 2016).
+hybrid journals. According ot its Plan S launched in 2018, the cOAlition
+S funders only accept hybrid open access through transformative
+agreements ``during a transition period that should be as short as
+possible'' (Schiltz, 2018). Specifically, they agreed to support hybrid
+open access solely through transformative agreements from 1 January
+2021, until the end of 2024. Notably, the German Research Foundation
+(DFG), despite not being part of cOAlition S, has also extended its
+financial support for hybrid open access through transformative
+agreements (Mittermaier, 2021). Previously, the DFG only provided
+funding for full open access journals (Jahn \& Tullney, 2016).
 
 By the end of 2023, many transformative agreements were implemented, but
-the outcomes are mixed. The ESAC Transformative Agreement
+outcomes were mixed. The ESAC Transformative Agreement
 Registry\footnote{\url{https://esac-initiative.org/about/transformative-agreements/agreement-registry/}},
 the largest source of disclosure, recorded more than 800 transformative
 agreements, resulting in up to 900.000 open access articles published in
 both full open access and hybrid journals according to the accompanying
 ESAC Market Watch\footnote{\url{https://esac-initiative.org/market-watch/}}.
-National consortia reported increased open access volume, streamlined
+Library consortia reported increased open access volume, streamlined
 payment and monitoring procedures, as well as extensive utilization of
-open access options by the researchers they serve (Hinchliffe, 2019;
-Marques \& Stone, 2020; Parmhed \& Säll, 2023). The ongoing
+open access options by the researchers they serve (Marques \& Stone,
+2020; Parmhed \& Säll, 2023; Pinhasi et al., 2020). The ongoing
 standardisation of transformative agreements contributed to improved
 transparency in terms of contracts and publisher-provided article
 metadata (Marques et al., 2019). However, with the growing trend toward
 transformative agreements, continued reliance on big deals is perceived
-as problematic, perpetuating the business relationships that led to the
-serial crisis. Whether transformative agreements lead to reduced pricing
-remains uncertain (\textbf{Borrego\_2023?}). A substantial transition of
-hybrid journals towards full OA could not be observed (Matthias et al.,
-2019; Momeni et al., 2021), and the focus on large commercial publishers
-has led to concerns regarding inequality, because transformative
-agreements continue to target institutions from high-income countries
-(Butler et al., 2023; Klebel \& Ross-Hellauer, 2023). Besides, an
-editorial-board resignation raised concerns that publishers' desire to
-maximize journal publication volume ``without regard to quality'' is a
-consequence of transformative agreements (Rasmussen, 2023).
+as problematic, which might perpetuate market concentration (Butler et
+al., 2023; Shu \& Larivière, 2023). Whether transformative agreements
+lead to reduced pricing remains uncertain (Borrego, 2023) and a
+substantial transition of hybrid journals towards full open access could
+not be observed (Matthias et al., 2019; Momeni et al., 2021).
+Furthermore, the focus on large commercial publishers might increase
+inequality, because transformative agreements continue to target
+institutions from high-income countries (Klebel \& Ross-Hellauer, 2023).
+Besides, an editorial-board resignation raised concerns that publishers'
+desire to maximize journal publication volume ``without regard to
+quality'' is a consequence of transformative agreements (Rasmussen,
+2023).
 
 The controversies surrounding hybrid open access and transformative
-agreements have led to varying practical conclusions. For instance, the
-Swedish BIBSAM consortium recommended to only support agreements for
-publishing in full open access journals. Likewise, most cOAlition S
-funders will discontinue financial support for transformative agreements
-from 2024 onwards (Liverpool, 2023). The consortium also removed most
-hybrid journals from its Transformative Journal program in 2023 due to
-their failure to meet self-defined open access growth targets. In
-contrast, the German DEAL consortium signed a cost-effective five-year
-transformative agreement with Elsevier starting in 2024, while also
-renewing its contracts with Springer Nature and Wiley until the end of
-2028.
+agreements have led to varying policy conclusions. For instance, the
+Association of Swedish Higher Education Institutions (Sveriges
+universitets- och högskoleförbund, SUHF) recommended to only support
+agreements for publishing in full open access journals \footnote{\url{https://www.su.se/english/news/open-access-need-to-move-away-from-transformative-agreements-1.683787}}.
+Likewise, most cOAlition S funders will discontinue financial support
+for transformative agreements from 2024 onwards (Liverpool, 2023). The
+consortium also removed most hybrid journals from its Transformative
+Journal program in 2023 due to their failure to meet self-defined open
+access growth targets (Brainard, 2023). In contrast, the German DEAL
+consortium signed a five-year transformative agreement with Elsevier
+starting in 2024, while also renewing its contracts with Springer Nature
+and Wiley until the end of 2028.
 
-Against this background, the research objective of this study is to
-investigate the open access uptake of hybrid journals between 2018 and
-2022, and the extent to which open access in hybrid journals can be
-attributed to transformative agreements. Previous quantitative science
-studies were able to investigate transformative agreements relative to
-specific countries (Haucap et al., 2021; Huang et al., 2020; Pölönen et
-al., 2020; Taubert et al., 2023; Wenaas, 2022) and journal portfolios
-(Bakker et al., 2024; Fraser et al., 2023; Momeni et al., 2023; Pieper
-\& Broschinski, 2018; \textbf{Jahn\_2022?}). Others have focused soley
-on APC list prices (Shu \& Larivière, 2023; Zhang et al., 2022), not
-accounting for the peculiarities of transformative agreements.
-Similarly, bibliometric databases, even though many allow the retrieval
-of open access articles in hybrid journals, do not directly attribute
-them to specific transformative agreements.
+Despite these controversies around transformative agreements as a means
+of transitioning journal publishing to full open access, there is
+limited evidence available on the adoption of open access in hybrid
+journals, and the extent to which this uptake can be attributed to
+transformative agreements. Previous studies have focused on specific
+countries (Haucap et al., 2021; Huang et al., 2020; Pölönen et al.,
+2020; Taubert et al., 2023; Wenaas, 2022) or publisher portfolios
+(Bakker et al., 2024; Fraser et al., 2023; Jahn et al., 2022; Momeni et
+al., 2023; Pieper \& Broschinski, 2018), while related large-scale
+studies relied on self-reported agreement data (Moskovkin et al., 2022),
+or used APC pricing lists (Shu \& Larivière, 2023). Particularly, data
+availability is a limiting factor when studying the impact of
+transformative agreements (Bakker et al., 2024), because bibliometric
+databases, even though many allow the retrieval of open access articles
+in hybrid journals, do not directly attribute them to specific
+transformative agreements.
 
-The present study aims at a large-scale investigation using openly
-available data sources to answer the following research questions:
+The present study aims to address these limitations by combining
+multiple openly available data sources to determine the open access
+uptake in hybrid journals, while distinguishing between open access
+through transformative agreements and other means. With this novel and
+open approach, this study aims to answer the following questions:
 
 \begin{itemize}
 \tightlist
 \item
-  What are the number and proportion of open access articles in hybrid
-  journals published under transformative agreements between 2018-2022?
+  What was the number and proportion of open access articles in hybrid
+  journals included in transformative agreements between 2018 and 2022?
 \item
-  Who is publishing open access in hybrid journals enabled by
-  transformative agreements, and who is not?
+  How did transformative agreements impact open access uptake in hybrid
+  journals?
 \end{itemize}
 
-The results of the study will be group by publishers, subjects and
-countries to account for the controversies.
+For both of these research questions, this study will analyse the
+variability by publisher, journal subject, and country.
 
 \hypertarget{methods-and-data}{%
 \section{Methods and data}\label{methods-and-data}}
@@ -327,10 +332,10 @@ However, because of low coverage in OpenAlex, this study focused on
 first authors and their affiliations instead. First authors typically
 contribute most to a paper and are often considered lead author research
 papers (Larivière et al., 2016), and can be therefore assumed as a proxy
-to measure to open access payments (Zhang et al., 2022). Overall, around
-90\% of studied articles had first author affiliation metadata in
-OpenAlex, whereas the coverage of articles with corresponding author
-information was around 54\%.
+to measure to open access payments (Shu \& Larivière, 2023; Zhang et
+al., 2022). Overall, around 90\% of studied articles had first author
+affiliation metadata in OpenAlex, whereas the coverage of articles with
+corresponding author information was around 54\%.
 
 To assess the impact of transformative agreements to hybrid open access,
 participating institutions from the Transformative Agreement Data dump,
@@ -750,14 +755,24 @@ Björk, B.-C. (2017). Growth of hybrid open access, 2009--2016.
 \emph{PeerJ}, \emph{5}, e3878. \url{https://doi.org/10.7717/peerj.3878}
 
 \leavevmode\vadjust pre{\hypertarget{ref-BJ_RK_2014}{}}%
-Björk, B., \& Solomon, D. (2014). How research funders can finance APCs
-in full OA and hybrid journals. \emph{Learned Publishing}, \emph{27}(2),
-93--103. \url{https://doi.org/10.1087/20140203}
+Björk, B.-C., \& Solomon, D. (2014). How research funders can finance
+APCs in full OA and hybrid journals. \emph{Learned Publishing},
+\emph{27}(2), 93--103. \url{https://doi.org/10.1087/20140203}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Borrego_2023}{}}%
+Borrego, Á. (2023). Article processing charges for open access journal
+publishing: A review. \emph{Learned Publishing}, \emph{36}(3), 359--378.
+\url{https://doi.org/10.1002/leap.1558}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Borrego_2020}{}}%
 Borrego, Á., Anglada, L., \& Abadal, E. (2020). Transformative
 agreements: Do they pave the way to open access? \emph{Learned
 Publishing}. \url{https://doi.org/10.1002/leap.1347}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Brainard_2023}{}}%
+Brainard, J. (2023). {``Transformative''} journals get booted for
+switching to open access too slowly. In \emph{Science: SCIENCEINSIDER}.
+\url{https://doi.org/10.1126/science.adj3282}
 
 \leavevmode\vadjust pre{\hypertarget{ref-goldoa}{}}%
 Bruns, A., Cakir, Y., Kaya, S., \& Beidaghi, S. (2022).
@@ -904,6 +919,12 @@ when a journal converts to open access? A bibliometric analysis.
 \emph{Scientometrics}, \emph{126}(12), 9811--9827.
 \url{https://doi.org/10.1007/s11192-021-03972-5}
 
+\leavevmode\vadjust pre{\hypertarget{ref-Moskovkin_2022}{}}%
+Moskovkin, V. M., Saprykina, T. V., \& Boichuk, I. V. (2022).
+Transformative agreements in the development of open access.
+\emph{Journal of Electronic Resources Librarianship}, \emph{34}(3),
+165--207. \url{https://doi.org/10.1080/1941126x.2022.2099000}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Parmhed_2023}{}}%
 Parmhed, S., \& Säll, J. (2023). Transformative agreements and their
 practical impact: A librarian perspective. \emph{Insights the UKSG
@@ -922,6 +943,13 @@ approaches to funding journal article-processing charges in combination
 with subscriptions. \emph{Journal of the Association for Information
 Science and Technology}, \emph{67}(7), 1751--1766.
 \url{https://doi.org/10.1002/asi.23446}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Pinhasi_2020}{}}%
+Pinhasi, R., Kromp, B., Blechl, G., \& Hölbling, L. (2020). The impact
+of open access publishing agreements at the {University of Vienna} in
+light of the plan s requirements: A review of current status, challenges
+and perspectives. \emph{Insights the UKSG Journal}, \emph{33}.
+\url{https://doi.org/10.1629/uksg.523}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Piwowar_2018}{}}%
 Piwowar, H., Priem, J., Larivière, V., Alperin, J. P., Matthias, L.,
@@ -949,7 +977,7 @@ Publishing}, \emph{16}(3), 163--166.
 \url{https://doi.org/10.1087/095315103322110923}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Goodin_2023}{}}%
-Rasmussen, K. B. (2023). Interview with robert {``bob''} e. goodin.
+Rasmussen, K. B. (2023). Interview with {Robert {``Bob''} E. Goodin}.
 \emph{Tidskrift För Politisk Filosofi}.
 \url{https://www.politiskfilosofi.se/fulltext/2023-2/pdf/TPF_2023-2_interview_with_robert_bob_e_goodin.pdf}
 
