--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -17,7 +17,7 @@
 
 @article{Goodin_2023,
   author = {Katharina Berndt Rasmussen},
-  title = {Interview with Robert ‘Bob’ E. Goodin},
+  title = {Interview with {Robert ‘Bob’ E. Goodin}},
   journal = {Tidskrift för politisk filosofi},
   issue = 2,
   year = {2023},
@@ -86,7 +86,7 @@ abstract = {{The SOAP (Study of Open Access Publishing) project has compiled dat
 
 @article{Butler_2023, title={The oligopoly’s shift to open access: How the big five academic publishers profit from article processing charges}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00272}, DOI={10.1162/qss_a_00272}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Butler, Leigh-Ann and Matthias, Lisa and Simard, Marc-André and Mongeon, Philippe and Haustein, Stefanie}, year={2023}, month=dec, pages={1–22} }
 
-@article{Bj_rk_2017, title={Growth of hybrid open access, 2009–2016}, volume={5}, ISSN={2167-8359}, url={http://dx.doi.org/10.7717/peerj.3878}, DOI={10.7717/peerj.3878}, journal={PeerJ}, publisher={PeerJ}, author={Björk, Bo-Christer}, year={2017}, month=sep, pages={e3878} }
+@article{Bj_rk_2017, title={Growth of hybrid open access, 2009–2016}, volume={5}, ISSN={2167-8359}, url={http://dx.doi.org/10.7717/peerj.3878}, DOI={10.7717/peerj.3878}, journal={PeerJ}, publisher={PeerJ}, author={ Bo-Christer Björk}, year={2017}, month=sep, pages={e3878} }
 
 @article{Fraser_2023, title={No deal: German researchers’ publishing and citing behaviors after Big Deal negotiations with Elsevier}, volume={4}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00255}, DOI={10.1162/qss_a_00255}, number={2}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Fraser, Nicholas and Hobert, Anne and Jahn, Najko and Mayr, Philipp and Peters, Isabella}, year={2023}, pages={325–352} }
 
@@ -103,12 +103,20 @@ abstract = {{The SOAP (Study of Open Access Publishing) project has compiled dat
  year = {2021}}
  
  
- @article{BJ_RK_2014, title={How research funders can finance APCs in full OA and hybrid journals}, volume={27}, ISSN={1741-4857}, url={http://dx.doi.org/10.1087/20140203}, DOI={10.1087/20140203}, number={2}, journal={Learned Publishing}, publisher={Wiley}, author={Björk, Bo‐Christer and Solomon, David}, year={2014}, month=apr, pages={93–103} }
+ @article{BJ_RK_2014, title={How research funders can finance APCs in full OA and hybrid journals}, volume={27}, ISSN={1741-4857}, url={http://dx.doi.org/10.1087/20140203}, DOI={10.1087/20140203}, number={2}, journal={Learned Publishing}, publisher={Wiley}, author={Björk, Bo-Christer and Solomon, David}, year={2014}, month=apr, pages={93–103} }
  
  
  @article{Bakker_2024, title={Impact of Transformative Agreements on Publication Patterns: An Analysis Based on Agreements from the ESAC Registry}, volume={8}, ISSN={2474-3542}, url={http://dx.doi.org/10.23974/ijol.2024.vol8.4.341}, DOI={10.23974/ijol.2024.vol8.4.341}, number={4}, journal={International Journal of Librarianship}, publisher={International Journal of Librarianship}, author={Bakker, Caitlin and Langham-Putrow, Allison and Riegelman, Amy}, year={2024}, month=jan, pages={67–96} }
  
 @article{Momeni_2021, title={What happens when a journal converts to open access? A bibliometric analysis}, volume={126}, ISSN={1588-2861}, url={http://dx.doi.org/10.1007/s11192-021-03972-5}, DOI={10.1007/s11192-021-03972-5}, number={12}, journal={Scientometrics}, publisher={Springer Science and Business Media LLC}, author={Momeni, Fakhri and Mayr, Philipp and Fraser, Nicholas and Peters, Isabella}, year={2021}, month=apr, pages={9811–9827} }
+
+@article{Pinhasi_2020, title={The impact of open access publishing agreements at the {University of Vienna} in light of the Plan S requirements: a review of current status, challenges and perspectives}, volume={33}, ISSN={2048-7754}, url={http://dx.doi.org/10.1629/uksg.523}, DOI={10.1629/uksg.523}, journal={Insights the UKSG journal}, publisher={Ubiquity Press, Ltd.}, author={Pinhasi, Rita and Kromp, Brigitte and Blechl, Guido and Hölbling, Lothar}, year={2020} }
+
+@misc{Brainard_2023, DOI={10.1126/science.adj3282}, author = {Jeffery Brainard}, journal={Science: SCIENCEINSIDER}, year={2023}, title = {‘Transformative’ journals get booted for switching to open access too slowly} }
+
+@article{Moskovkin_2022, title={Transformative agreements in the development of open access}, volume={34}, ISSN={1941-1278}, url={http://dx.doi.org/10.1080/1941126X.2022.2099000}, DOI={10.1080/1941126x.2022.2099000}, number={3}, journal={Journal of Electronic Resources Librarianship}, publisher={Informa UK Limited}, author={Moskovkin, Vladimir M. and Saprykina, Tatyana V. and Boichuk, Igor V.}, year={2022}, month=jul, pages={165–207} }
+
+@article{Borrego_2023, title={Article processing charges for open access journal publishing: A review}, volume={36}, ISSN={1741-4857}, url={http://dx.doi.org/10.1002/leap.1558}, DOI={10.1002/leap.1558}, number={3}, journal={Learned Publishing}, publisher={Wiley}, author={Borrego, Ángel}, year={2023}, month=jul, pages={359–378} }
 
 %%%%
 @misc{OS_Monitor,
