--- a/analysis/manuscript.Rmd
+++ b/analysis/manuscript.Rmd
@@ -56,12 +56,12 @@ ta_oa_inst <- readr::read_csv(here::here("data", "ta_oa_inst.csv.gz"))
 
 For over two decades, hybrid open access journal publishing, which makes some articles openly available while others remain behind a paywall, has been discussed as a  model for transitioning the subscription system to full open access [@Prosser_2003].
 The idea was that when journals increasingly publish open access articles, they could reduce revenues from subscriptions, while libraries and funders could change their funding models and shift expenditures from subscription to open access. 
-However, initial approaches, mainly based on publication fees, also called article processing charges (APCs), did not contribute substantially to an large open access uptake. 
+However, initial approaches, mainly based on publication fees, also called article processing charges (APCs), did not contribute substantially to a large open access uptake. 
 In 2009, Springer reported open access to 1% of articles in hybrid journals [@Dallmeier_2010].
 Other publishers also recorded a low uptake.
-In 2011, only 1-2% of articles in over 4,300 hybrid journals from large publishers were open access [@Bj_rk_2012], growing to around 4% between 2011 and 2013 [@Laakso_2016]. 
+In 2011, only 1-2% of articles were open access [@Bj_rk_2012], growing to around 4% between 2011 and 2013 [@Laakso_2016]. 
 
-With the introduction of central funding mechanisms for hybrid open access publication fees in some European countries since 2012 an increase in open access could be observed [@Bj_rk_2017; @Piwowar_2018; @Jubb_2017; @Huang_2020].
+With the introduction of central funding mechanisms for hybrid open access publication fees in some European countries since 2012, an increase in open access could be observed [@Bj_rk_2017; @Piwowar_2018; @Jubb_2017; @Huang_2020].
 For example, studying university output, @Robinson_Garcia_2020 estimated a median uptake of 7.1% in the period 2014-2017. 
 In particular, British (17%), Austrian (15%) and Dutch (13%) universities contributed to this trend. 
 However, this shift in funding policy towards hybrid open access also added to the overall cost of publishing, which includes subscription spending and the administrative efforts required to handle payments [@Pinfield_2016].
@@ -70,43 +70,42 @@ Moreover, established large commercial publishers, which already dominated the p
 As a consequence, libraries and their consortia began to develop licensing strategies aimed at avoiding such ‘double dipping’ scenarios, in which well-established commercial publishers gain twice from reading and publication fees, as well as to increase publisher-provided immediate open access [@BJ_RK_2014; @Schimmer_2015].
 These considerations resulted into transformative agreements, which cover a broad range of successfully negotiated contracts between library consortia and publishers from mid-2010s onwards where institutional spending for subscriptions are re-purposed for open access publishing [@Borrego_2020; @Hinchliffe_2019].
 Transformative agreements seek to control costs while allowing a transitional phase for publishing more open access articles. 
-Although transformative agreements mainly focus on large hybrid journals and subscription-only portfolios of commercial publishers,  they aim at a higher degree of transparency than previous big deals, where contracts including payments were confidential [@Bergstrom_2014].
+Although transformative agreements mainly bundle hybrid and subscription-only journals from commercial publishers, they aim at a higher degree of transparency than previous big deals, where contracts including payments were confidential [@Bergstrom_2014].
 <!-- For example, the nationwide DEAL consortium in Germany, which includes universities and academic institutions, collectively cancelled their subscriptions with Elsevier from 2017 onwards to negotiate a transformative agreement [@Fraser_2023]. -->
 
 The introduction of transformative agreements aligns with funding policy changes, such as the decision made by the cOAlition S, a consortium of national funders including the European Commission, to no longer provide financial support for individual publication fees when publishing in hybrid journals.
-According ot its Plan S, they only accept hybrid open access through transformative agreements "during a transition period that should be as short as possible" [@Schiltz_2018]. 
-Specifically, cOAlition S funders agreed to support hybrid open access solely through transformative agreements from 1 January 2021, until the end of 2024.
+According ot its Plan S launched in 2018, the cOAlition S funders only accept hybrid open access through transformative agreements "during a transition period that should be as short as possible" [@Schiltz_2018]. 
+Specifically, they agreed to support hybrid open access solely through transformative agreements from 1 January 2021, until the end of 2024.
 Notably, the German Research Foundation (DFG), despite not being part of cOAlition S, has also extended its financial support for hybrid open access through transformative agreements [@Mittermaier_2021]. Previously, the DFG only provided funding for full open access journals [@Jahn_2016].
 
-By the end of 2023, many transformative agreements were implemented, but the outcomes were mixed.
+By the end of 2023, many transformative agreements were implemented, but outcomes were mixed.
 The ESAC Transformative Agreement Registry[^esacregistry], the largest source of disclosure, recorded more than 800 transformative agreements, resulting in up to 900.000 open access articles published in both full open access and hybrid journals according to the accompanying ESAC Market Watch[^esacmarketwatch]. 
-National consortia reported increased open access volume, streamlined payment and monitoring procedures, as well as extensive utilization of open access options by the researchers they serve [@Marques_2020; @Hinchliffe_2019; @Parmhed_2023]. 
+Library consortia reported increased open access volume, streamlined payment and monitoring procedures, as well as extensive utilization of open access options by the researchers they serve [@Marques_2020; @Pinhasi_2020; @Parmhed_2023]. 
 The ongoing standardisation of transformative agreements contributed to improved transparency in terms of contracts and publisher-provided article metadata [@Marques_2019].
-However, with the growing trend toward transformative agreements, continued reliance on big deals is perceived as problematic, perpetuating the business relationships that led to the serial crisis. 
-Whether transformative agreements lead to reduced pricing remains uncertain [@Borrego_2023].
-A substantial transition of hybrid journals towards full OA could not be observed [@Momeni_2021; @Matthias_2019], and the focus on large commercial publishers has led to concerns regarding inequality, because transformative agreements continue to target institutions from high-income countries [@Klebel_2023; @Butler_2023]. 
+However, with the growing trend toward transformative agreements, continued reliance on big deals is perceived as problematic, which might perpetuate market concentration [@Butler_2023; @Shu_2023]. 
+Whether transformative agreements lead to reduced pricing remains uncertain [@Borrego_2023] and
+a substantial transition of hybrid journals towards full open access could not be observed [@Momeni_2021; @Matthias_2019].
+Furthermore, the focus on large commercial publishers might increase inequality, because transformative agreements continue to target institutions from high-income countries [@Klebel_2023]. 
 Besides, an editorial-board resignation raised concerns that publishers' desire to maximize journal publication volume "without regard to quality" is a consequence of transformative agreements [@Goodin_2023].
 
-The controversies surrounding hybrid open access and transformative agreements have led to varying practical conclusions. 
-For instance, the Swedish BIBSAM consortium recommended to only support agreements for publishing in full open access journals.
+The controversies surrounding hybrid open access and transformative agreements have led to varying policy conclusions. 
+For instance, the  Association of Swedish Higher Education Institutions (Sveriges universitets- och
+högskoleförbund, SUHF) recommended to only support agreements for publishing in full open access journals [^sweden].
 Likewise, most cOAlition S funders will discontinue financial support for transformative agreements from 2024 onwards [@Liverpool_2023].
-The consortium also removed most hybrid journals from its Transformative Journal program in 2023 due to their failure to meet self-defined open access growth targets. 
-In contrast, the German DEAL consortium signed a cost-effective five-year transformative agreement with Elsevier starting in 2024, while also renewing its contracts with Springer Nature and Wiley until the end of 2028.
+The consortium also removed most hybrid journals from its Transformative Journal program in 2023 due to their failure to meet self-defined open access growth targets [@Brainard_2023]. 
+In contrast, the German DEAL consortium signed a five-year transformative agreement with Elsevier starting in 2024, while also renewing its contracts with Springer Nature and Wiley until the end of 2028.
 
-Against this background, the research objective of this study is to investigate the open access uptake of hybrid journals between 2018 and 2022, and the extent to which open access in hybrid journals can be attributed to transformative agreements.
-Previous quantitative science studies were able to investigate transformative agreements relative to specific countries [@P_l_nen_2020; @Huang_2020; @Haucap_2021; @Wenaas_2022; @Taubert_2023] and journal portfolios [@Pieper_2018; @Bakker_2024; @Fraser_2023; @Jahn_2022; @Momeni_2023].
-Others have focused soley on APC list prices [@Zhang_2022; @Shu_2023], not accounting for the peculiarities of transformative agreements. 
-Similarly, bibliometric databases, even though many allow the retrieval of open access articles in hybrid journals, do not directly attribute them to specific transformative agreements.
+Despite these controversies around transformative agreements as a means of transitioning journal publishing to full open access, there is limited evidence available on the adoption of open access in hybrid journals, and the extent to which this uptake can be attributed to transformative agreements.
+Previous studies have focused on specific countries [@P_l_nen_2020; @Huang_2020; @Haucap_2021; @Wenaas_2022; @Taubert_2023] or publisher portfolios [@Pieper_2018; @Bakker_2024; @Fraser_2023; @Jahn_2021; @Momeni_2023], while related large-scale studies relied on self-reported agreement data [@Moskovkin_2022], or used APC pricing lists [@Shu_2023]. 
+Particularly, data availability is a limiting factor when studying the impact of transformative agreements [@Bakker_2024], because bibliometric databases, even though many allow the retrieval of open access articles in hybrid journals, do not directly attribute them to specific transformative agreements. 
 
-The present study aims at a large-scale investigation using openly available data sources to answer the following research questions:
+The present study aims to address these limitations by combining multiple openly available data sources to determine the open access uptake in hybrid journals, while distinguishing between open access through transformative agreements and other means. 
+With this novel and open approach, this study aims to answer the following questions:
 
-- What are the number and proportion of open access articles in hybrid journals published under transformative agreements between 2018-2022?
-- Who is publishing open access in hybrid journals enabled by transformative agreements, and who is not?
+- What was the number and proportion of open access articles in hybrid journals included in transformative agreements between 2018 and 2022?
+- How did transformative agreements impact open access uptake in hybrid journals?
 
-The results of the study will be group by publishers, subjects and countries to account for the controversies.
-
-
-
+For both of these research questions, this study will analyse the variability by publisher, journal subject, and country.
 
 # Methods and data
 
@@ -213,7 +212,7 @@ This further step allowed to remove additional `r length(unique(oa_prop$issn_l))
 Affiliation metadata about corresponding authors are crucial for the planning and evaluation of transformative agreements, because they are considered to be responsible to arrange open access publication [@Schimmer_2015; @Geschuhn_2017; @Borrego_2020]. 
 Here, country and institutional affiliations were retrieved from OpenAlex.
 However, because of low coverage in OpenAlex, this study focused on first authors and their affiliations instead.
-First authors typically contribute most to a paper and are often considered lead author research papers [@Larivi_re_2016], and can be therefore assumed as a proxy to measure to open access payments [@Zhang_2022].
+First authors typically contribute most to a paper and are often considered lead author research papers [@Larivi_re_2016], and can be therefore assumed as a proxy to measure to open access payments [@Zhang_2022; @Shu_2023].
 Overall, around 90% of studied articles had first author affiliation metadata in OpenAlex, whereas the coverage of articles with corresponding author information was around 54%.
 
 ```{r cr_stats_overview}
@@ -1430,3 +1429,5 @@ pub_subject_output_plot
 [^doaj]: <https://doaj.org/csv>
 
 [^checkertool]: <https://www.coalition-s.org/blog/enabling-accurate-results-within-the-journal-checker-tool/>
+
+[^sweden]: <https://www.su.se/english/news/open-access-need-to-move-away-from-transformative-agreements-1.683787>
